added great tea section and on the progress

--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
                  </div>
               </div>
           </section>
+
+           <!-- great tea section -->
+           <section class="mb-24">
+                <div class="grid grid-cols-1 lg:grid-cols-2">
+                  <!-- image section -->
+                   <div>
+
+                   </div>
+                   <!-- text-section -->
+                    <div>
+                      <h1>Great Tea, Freshly Presented</h1>
+                      <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                      <br>
+                      <h1>Unique Taste</h1>
+                      <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                      <br>
+                      <h1>Premium Quality</h1>
+                      <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    </div>
+                </div>
+           </section>
      </main>
 </body>
 </html>
