--- a/index.html
+++ b/index.html
@@ -133,6 +133,66 @@
                     </div>
                 </div>
            </section>
+
+           <!-- reviews section -->
+            <section class="mb-24 ">
+              <div class=" bg-gradient-to-r from-orange-400 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-1 text-white px-7 md:px-16">
+                <!-- text-section -->
+                <div class="flex justify-center items-center overflow-hidden">
+                  <div class="w-5/6">
+                    <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
+                    <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="bg-white
+                    text-orange-700 px-3 py-2 rounded-lg">Show All</button>
+                   </div>
+                </div>
+
+                 
+                 <!-- review card section -->
+                 <div class="relative py-24">
+                  <!-- top card -->
+                   <div class="opacity-40 flex items-center relative text-black rounded-lg h-56 w-full md:w-3/4 bg-white px-5">
+                    <div class="absolute -top-5 -left-5">
+                      <img class="bg-white rounded-full p-1" src="images/client.png" alt="">
+                    </div>
+                    <div>
+                      <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment </p>
+                      <h1 class="font-bold">Ilham Yuda</h1>
+                      <small class="text-gray-500">Businessman</small>
+                    </div>
+                   </div>
+
+                   <!-- bottom card -->
+                   <div class="opacity-40 top-10 flex items-center relative text-black rounded-lg h-56 w-full md:w-3/4 bg-white px-5">
+                    <div class="absolute -top-5 -left-5">
+                      <img class="bg-white rounded-full p-1" src="images/client.png" alt="">
+                    </div>
+                    <div>
+                      <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment </p>
+                      <h1 class="font-bold">Ilham Yuda</h1>
+                      <small class="text-gray-500">Businessman</small>
+                    </div>
+                   </div>
+                </div>
+              </div>
+            </section>
      </main>
+
+     <!-- footer section start -->
+     <footer class="bg-orange-100 h-32 text-gray-700 py-10 px-4 md:px-16">
+      <div class="w-9/12 mx-auto">
+        <!-- logo -->
+         <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="images/cup.png" alt="">
+          <div class="flex items-center gap-4">
+            <h4>Ready to get started</h4>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold" ">
+              Get started
+            </button>
+          </div>
+         </div>
+      </div>
+
+     </footer>
 </body>
 </html>
