--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
      </main>
 
      <!-- footer section start -->
-     <footer class="bg-orange-100 h-32 text-gray-700 py-10 px-4 md:px-16">
+     <footer class="bg-orange-100  text-gray-700 py-10 px-4 md:px-16">
       <div class="w-9/12 mx-auto">
         <!-- logo -->
          <div class="mb-8 flex justify-between">
@@ -191,6 +191,41 @@
             </button>
           </div>
          </div>
+         <!-- links -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <!-- first column -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Quick links</h3>
+              <ul space-y-2>
+                <li><a class="hover:text-orange-600" href="">Home</a></li>
+                <li><a class="hover:text-orange-600" href="">About</a></li>
+                <li><a class="hover:text-orange-600" href="">Insurance</a></li>
+                <li><a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+              </ul>
+
+             </div>
+            <!-- second column -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Our selves</h3>
+              <ul space-y-2>
+                <li><a class="hover:text-orange-600" href="">Home</a></li>
+                <li><a class="hover:text-orange-600" href="">About</a></li>
+                <li><a class="hover:text-orange-600" href="">Insurance</a></li>
+                <li><a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+              </ul>
+
+             </div>
+            <!-- third column -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Help</h3>
+              <ul space-y-2>
+                <li><a class="hover:text-orange-600" href="">Home</a></li>
+                <li><a class="hover:text-orange-600" href="">About</a></li>
+                
+              </ul>
+
+             </div>
+          </div>
       </div>
 
      </footer>
