--- a/index.html
+++ b/index.html
@@ -225,6 +225,24 @@
               </ul>
 
              </div>
+
+             <!-- forth column -->
+              <div>
+                <h3 class="font-semibold text-lg mb-3">Subscribe to our newsletter</h3>
+              
+              <div class="flex flex-col space-y-2">
+                <div>
+                  <input class="bg-transparent border-b-2 w-4/6  border-black" type="text" placeholder="Email Address">
+                  <i class="fa-sharp fa-solid fa-chevron-right w-7 h-7 inline-flex bg-orange-600 rounded-full text-white justify-center items-center"></i>
+                  <div class="flex justify-between w-2/5 mb-2 mt-8">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-twitter"></i>
+                  </div>
+                </div>
+
+              </div>
+            </div>
           </div>
       </div>
 
