--- a/index.html
+++ b/index.html
@@ -244,6 +244,11 @@
               </div>
             </div>
           </div>
+
+          <div class="text-center pt-6 mt-6">
+            <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+
+          </div>
       </div>
 
      </footer>
